fix(60): persist 注册助手 registerMeta + Java 8 兼容修复（Map.ofEntries/Set.of/readAllBytes→JDK8 等价，mvn clean 暴露增量编译掩盖）+ Dockerfile.demo